<resources>
    <string name="app_name">校園0距離</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">信箱</string>
    <string name="hint_password">密碼</string>
    <string name="hint_name">姓名</string>
    <string name="btn_login">登入</string>
    <string name="btn_register">註冊</string>
    <string name="btn_link_to_register">尚未註冊嗎？現在馬上註冊！</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">登出</string>
    <string name="name">Fullname</string>
    <string name="btn_register_student">學生</string>
    <string name="btn_register_teacher">老師</string>
    <string name="missionname_new_mission">任務名稱：</string>
    <string name="actionbar_new_mission">建立任務：</string>
    <string name="actionbar_edit_mission">編輯任務：</string>
    <string-array name="pay_new_mission">
        <item>飲料</item>
        <item>餅乾</item>
        <item>無</item>
        <item>其他</item>
    </string-array>
    <string name="content_new_mission">任務內容：</string>
    <string name="date_new_mission">任務日期：</string>
    <string name="where_new_mission">集合地點：</string>
    <string-array name="virtue_new_mission">
        <item>均衡型</item>
        <item>體力型</item>
        <item>智慧型</item>
        <item>敏捷型</item>
    </string-array>
    <string name="errornoname_new_mission">任務名稱不能留白</string>
    <string name="errornocontent_new_mission">任務內容不能留白</string>
    <string name="errorwhere_new_mission">未填寫任務地點</string>
    <string name="errorvirtue_new_mission">任務屬性錯誤</string>
    <string name="groupname_new_group">揪團名稱：</string>
    <string name="actionbar_new_group">建立揪團</string>
    <string name="date_new_group">出團日期：</string>
    <string name="content_new_group">揪團內容：</string>
    <string name="where_new_group">相約在哪：</string>
    <string name="errorname_new_group">尚未輸入揪團名稱</string>
    <string name="errorpeoplenumber_new_group">還沒寫要揪幾人</string>
    <string name="errorwhere_new_group">尚未輸入相約地點</string>
    <string name="errorcontent_new_group">還沒輸入要做什麼歐</string>
    <string-array name="press_new_mission_and_group">
        <item>普通</item>
        <item>緊急</item>
    </string-array>
    <string name="peoplenumber_new_mission_and_group">需求人數：</string>
    <string name="buttomdate_new_mission_and_group">選擇哪天</string>
    <string name="buttomtime_new_mission_and_group">選擇幾點</string>
    <string name="year_new_mission_and_group">年</string>
    <string name="month_new_mission_and_group">月</string>
    <string name="day_new_mission_and_group">日</string>
    <string name="hour_new_mission_and_group">點</string>
    <string name="minute_new_mission_and_group">分</string>
    <string name="okbuttom_new_mission_and_group">完成</string>
    <string name="cancelbuttom_new_mission_and_group">取消</string>
    <string name="uploadpicture_new_mission_and_group">選擇圖片：</string>
    <string name="uploadpictruebuttom_new_mission_and_group">從檔案選取</string>
    <string name="takepicturebuttom_new_mission_and_group">拍照</string>
    <string name="notakepicture_new_mission_and_group">取消拍照</string>
    <string name="AM_new_mission_and_group">AM</string>
    <string name="PM_new_mission_and_group">PM</string>
    <string name="errornoDate_new_mission_and_group">尚未選擇日期</string>
    <string name="errornoTime_new_mission_and_group">尚未選擇時間</string>
    <string name="errorpeoplenumber_new_mission_and_group">請填寫需求人數</string>
    <string name="takepicturemessage_new_mission_and_group">長按圖片可刪除</string>
    <string name="idontwantpicture_new_mission_and_group">已取消選取</string>
    <string name="updata_new_mission_and_group">上傳成功</string>
    <string name="errorupdata_new_mission_and_group">上傳失敗</string>
    <string name="notification_QA_Title_HadAnswer">您發問的問題已有回答：</string>
    <string name="notification_QA_Contest_Answer">對方答覆：</string>
    <string name="notification_Successr">讀取成功</string>
    <string name="notification_Mission_Changer">您接取的任務有所更動</string>
    <string name="notification_Mission_Changer_Name">任務名稱為：</string>
    <string name="notification_Group_Changer">您參與的揪團有所更動</string>
    <string name="notification_Group_Changer_Name">揪團名稱為：</string>
    <string name="permission_new_mission_and_group">無法讀取圖片資訊，使否轉跳應用程式資訊頁面？</string>
    <string name="permission_tip">點擊權限，將關閉的權限打開</string>
    <string name="permission_no_premission_picture">若不授予權限將無法進行相片存取</string>
    <string name="permission_gotoset">轉跳頁面</string>
    <string name="permission_cencel">取消</string>
    <string name="icon_QA_toolbar">發問</string>
    <string name="ans_for_had_ans">編輯回答</string>
    <string name="edit_pop">編輯</string>
    <string name="ans_pop">回答</string>
    <string name="del_pop">刪除</string>
    <string name="report_pop">檢舉</string>
    <string name="section_format">test：</string>
    <string name="title_activity_new_tool_bar">NewToolBar</string>
    <string name="hint_nick_name">暱稱</string>
    <string name="hint_student_id">學號</string>
    <string name="btn_link_to_login">已經註冊了嗎？馬上登入看看吧！</string>
    <string name="ppeoplenumber">人數：</string>
    <string name="peoplenumber_people">人</string>
    <string name="date">日期:</string>
    <string name="time">時間:</string>
    <string name="language">語言：</string>
    <string name="textsizeL">大</string>
    <string name="textsizeM">中</string>
    <string name="textsizeS">小</string>
    <string name="showstyles">展現方式：</string>
    <string name="textsize">字體大小：</string>
    <string name="Sign_out">登出</string>
    <string name="showcontent">顯示內容</string>
    <string name="showpay">顯示獎勵</string>
    <string name="mainpage">主頁面</string>
    <string name="talktous">聯絡我們</string>
    <string-array name="tabstyle">
        <item>任務</item>
        <item>揪團</item>
        <item>未完成</item>
        <item>已完成</item>

    </string-array>
    <string-array name="languageSppingArrary">
        <item>中文</item>
        <item>English</item>
    </string-array>
    <string name="peopleCount">人數：</string>
    <string name="SortWay">排列方式</string>
    <string name="poTimeFirst">PO文時間優先</string>
    <string name="endTimeFirst">截止時間優先</string>
    <string-array name="drawer_menu">
        <item>任務</item>
        <item>揪團</item>
        <item>未完成</item>
        <item>已完成</item>
        <item>成就</item>
        <item>設定</item>
    </string-array>
    <string name="drawer_open">開啟</string>
    <string name="drawer_close">關閉</string>
    <string name="level">等級</string>
    <string name="exp">經驗值</string>
    <string name="money">金錢</string>
    <string name="Quality">素質</string>
    <string name="Force">力量</string>
    <string name="Agile">敏捷</string>
    <string name="Intelligence">智力</string>
    <string name="profession">職業</string>
    <string name="Achievement">成就</string>
    <string name="Aboutmyself">自我介紹</string>
    <string name="makefri">加好友</string>
    <string name="exit">離開</string>
    <string name="subscription">訂閱</string>
    <string name="saveandout">儲存並送出</string>
    <string name="inname">請輸入玩家名稱</string>
    <string name="waitacc">等待對方接受</string>
    <string name="search">搜尋</string>
    <string name="delfri">刪除</string>
    <string name="searchoth">找玩家</string>
    <string name="layoutset">卡片樣式設計</string>
    <string name="layoutset1">設定一</string>
    <string name="layoutset2">設定二</string>
    <string name="layoutset3">設定三</string>
    <string name="saveandexit">儲存並離開</string>
    <string name="cancle">取消</string>
    <string name="ourname">【名稱】YoYoYeeee</string>
    <string name="ourenergy">【屬性】宅40％、好男人50％、害羞10％</string>
    <string name="ourarea">【出沒地區】台中</string>
    <string name="ourps">【備註】</string>
    <string name="ourpsd">當你看到疑似本工作室的生物，請打開此APP大喊YoYoYeeee~~將可收服此生物於您的圖鑑內。</string>
    <string name="frienddetail">個人資料</string>
    <string name="frienddel">刪除</string>
    <string name="isfriendchech">已確認好友</string>
    <string name="nofriendchech">未確認好友</string>
    <string name="set">設定</string>
    <string name="ask_for_title">發問</string>
    <string name="ask_for_ok">確認</string>
    <string name="ask_for_cancle">取消</string>
    <string name="ans_for_title">回答</string>
    <string name="ans_for_ok">確認</string>
    <string name="ans_for_cancle">取消</string>
    <string name="qAndA_Title">Q&amp;A</string>
    <string name="answer_for_title">回答</string>
    <string name="qanda_Q">Q：</string>
    <string name="qanda_A">A：</string>
    <string name="who_is_publisher">發佈者</string>
    <string name="when_update">發文時間</string>
    <string name="when_to_do">執行時間</string>
    <string name="where_to_do">執行地點</string>
    <string name="what_price">獎勵</string>
    <string name="how_many_people">人數</string>
    <string name="who_is_joined">參與者</string>
    <string name="is_finished">已完成</string>
    <string name="q_and_a">Q&amp;A</string>
    <string name="edit_button">編輯</string>
    <string name="delete_button">刪除</string>
    <string name="rate_total">統一評分</string>
    <string name="rate_total_one">評分</string>
    <string name="rate_personal">個別評分</string>
    <string name="is_joined">參加</string>
    <string name="not_joined">不參加</string>
    <string name="is_already_joined">已參加</string>
    <string name="not_aleady_joined">已取消參加</string>
    <string name="join_error">參加失敗</string>
    <string name="not_join_error">取消失敗</string>
    <string name="rating_finished">已完成評分，任務完成</string>
    <string name="rating_fail">評分失敗，任務未完成</string>
    <string name="achievement1">"    成功獲得\n10個三星評價"</string>
    <string name="achievement2">"  完成10個任務\n執行、發佈間隔\n在一個小時以內"</string>
    <string name="achievement3">"    完成10個    \n    緊急任務    "</string>
    <string name="reading_error">請檢查網路狀態</string>
    <string name="no_one_join_now">目前尚未有人參與</string>
    <string name="delete_error">刪除失敗</string>
    <string name="delete_success">刪除成功</string>
    <string name="delete">刪除</string>
    <string name="are_you_sure_to_delete">確定要刪除嗎</string>
    <string name="are_you_sure_to_join">確定要參加嗎</string>
    <string name="are_you_sure_to_not_join">確定要取消參加嗎</string>
    <string name="are_you_sure_to_report">確定要檢舉嗎</string>
    <string name="yes">確定</string>
    <string name="cancel">取消</string>
    <string name="pic_reading_error_">圖片讀取錯誤</string>
    <string name="give_score">給予評分</string>
    <string name="re_give_score">重新給予評分</string>
    <string name="give">給予</string>
    <string name="star">顆星</string>
    <string name="hint_confirm_password">密碼再確認</string>
    <string name="confirm_email_title">信箱尚未通過驗證\n請到信箱確認</string>
    <string name="logout">登出</string>
    <string name="resend_confirm_email">重發驗證信</string>
    <string name="already_confirm_email">已經驗證信箱</string>
</resources>