<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/noans_group">
        <item
            android:id="@+id/popans_nogroup"
            android:title="@string/ans_pop"
            android:icon="@drawable/ic_announcement_black_24dp"/>
        <item
            android:id="@+id/popdel_nogroup"
            android:title="@string/del_pop"
            android:icon="@drawable/ic_delete_black_24dp"/>
        <item
            android:id="@+id/popreport_nogroup"
            android:title="@string/report_pop"
            android:icon="@drawable/ic_gavel_black_48dp"/>
    </group>
    <group android:id="@+id/hadans_group">
        <item
            android:id="@+id/popedit_hadans_group"
            android:title="@string/edit_pop"
            android:icon="@drawable/ic_mode_edit_black_24dp"/>
        <item
            android:id="@+id/popdel_hadans_group"
            android:title="@string/del_pop"
            android:icon="@drawable/ic_delete_black_24dp"/>
        <item
            android:id="@+id/popreport_hadans_group"
            android:title="@string/report_pop"
            android:icon="@drawable/ic_gavel_black_48dp"/>
    </group>

</menu>