<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/frame">
    <ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/repeat_cube_bg"
    android:fillViewport="false"
        android:layout_margin="3.5dp">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:minWidth="300dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout4"
            android:layout_margin="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="53dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/textsize"
                    android:id="@+id/textsizeread"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/textsizeRG"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textsizeL"
                    android:id="@+id/textsizeLRB"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"
                    android:textSize="30dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textsizeM"
                    android:id="@+id/textsizeMRB"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:textSize="25dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textsizeS"
                    android:id="@+id/textsizeSRB"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1"
                    android:textSize="20dp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/language"
                android:id="@+id/languageread"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/languageSpinner"
                android:background="#eff6fa"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/showstyles"
                android:id="@+id/showstyleread"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/showstyleRG"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp" >

                <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showcontent"
                android:id="@+id/showcontent"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/showpay"
                    android:id="@+id/showpay"
                    android:layout_gravity="right"
                    android:layout_weight="1" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/SortWay"
                android:id="@+id/SortWayTV"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/SortWay"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/endTimeFirst"
                    android:id="@+id/poTimeFirst"
                    android:layout_weight="1"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poTimeFirst"
                    android:id="@+id/endTimeFirst"
                    android:layout_gravity="right"
                    android:layout_weight="1" />
            </RadioGroup>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="53dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/layoutset"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/cardlayout" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/Cardlayoutset"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/layoutset1"
                    android:id="@+id/layoutset1"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/layoutset2"
                    android:id="@+id/layoutset2"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/layoutset3"
                    android:id="@+id/layoutset3"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_margin="5dp">



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal">
                <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="105dp"
                android:layout_height="28dp"
                android:text="@string/saveandexit"
                android:id="@+id/saveandexit"
                android:background="@drawable/patrickc_button_yellow"
                android:textColor="#0b0b07" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="105dp"
                    android:layout_height="28dp"
                    android:text="@string/cancle"
                    android:id="@+id/Setting_cancel"
                    android:background="@drawable/patrickc_button_yellow"
                    android:textColor="#0b0b07" /></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/userid"
                android:layout_gravity="bottom|right" />
        </LinearLayout>

    </LinearLayout>
    </FrameLayout>
</ScrollView>

</FrameLayout>