<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="@drawable/pageface"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:id="@+id/linearLayout7">

        <com.yoyoyee.zerodistance.helper.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/head" />
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="YoYoYeeee的製作團隊"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout7"
        android:background="@drawable/white_frame"
        android:radius="5dip"
        android:id="@+id/about_fl"
        android:layout_alignParentEnd="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="top"
            android:weightSum="1">

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ourname"
                android:id="@+id/textView7" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ourenergy"
                android:id="@+id/textView9" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ourarea"
                android:id="@+id/textView11" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ourps"
                android:id="@+id/textView13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ourpsd"
                android:id="@+id/textView15"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="30dp" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:layout_width="184dp"
        android:layout_height="90dp"
        android:id="@+id/imageView2"
        android:src="@drawable/cat"
        android:layout_above="@+id/FL"
        android:visibility="visible"
        android:layout_alignParentEnd="true" />

    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignBottom="@+id/about_fl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/FL">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talktous"
            android:id="@+id/talktous"
            android:textColor="#0000ff"
            android:textIsSelectable="false"
            android:layout_gravity="left|bottom"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:id="@+id/aboutexit"
            android:layout_alignParentBottom="true"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="5dp" />
    </FrameLayout>

</RelativeLayout>